--- a/nextflow.config
+++ b/nextflow.config
@@ -16,8 +16,41 @@ manifest {
 params {
 
 	inputCsv = 'test.csv'
-	blastdb = '/Volumes/Campana/Labwork/Avipoxvirus/avipox.fasta'
+	blastdb = "$launchDir/avipox.fasta"
 	readsdir = "$launchDir/"
 	outdir = "Avipox_Results"
 	
+}
+
+conda.enabled = true
+
+profiles {
+
+	hydra {
+		default_options = '-l mres=8G,h_data=8G,h_vmem=8G -S /bin/bash' // Default options for computation steps
+		
+		process {
+			executor = 'sge'
+			errorStrategy = 'finish'
+			queue = 'sThC.q'
+			clusterOptions = default_options
+			storeDir = 'chkpnt'
+			withName: 'removeAdapters' {
+				conda = 'bioconda::adapterremoval=2.3.3 conda-forge::libzlib=1.2.13'
+			}
+			withName: 'deduplicateReads' {
+				conda = 'bioconda::seqtk=1.4 cd-hit=4.8.1'
+			}
+			withName: 'blastReads' {
+				queue = 'lThMuVM.tq'
+				clusterOptions = "-l mres=8G,h_data=8G,himem -S /bin/bash"
+				conda = 'bioconda::blast=2.13.0 conda-forge::libzlib'
+			}
+			withName: blast2rmalca {
+				cpus = 2
+				penv = 'mthread'
+				conda = 'bioconda::megan=6.24.20'
+			}
+		}
+	}
 }
