--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,7 @@ params {
 	blastdb = "$launchDir/avipox.fasta"
 	readsdir = "$launchDir/"
 	outdir = "Avipox_Results"
+	taxon = 'Bamfordvirae'
 	
 }
 
@@ -46,7 +47,7 @@ profiles {
 				clusterOptions = "-l mres=8G,h_data=8G,himem -S /bin/bash"
 				conda = 'bioconda::blast=2.13.0 conda-forge::libzlib'
 			}
-			withName: blast2rmalca {
+			withName: 'blast2rmalca|getSequences' {
 				cpus = 2
 				penv = 'mthread'
 				conda = 'bioconda::megan=6.24.20'
