--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,7 @@ params {
 	blastdb = "$launchDir/avipox.fasta"
 	readsdir = "$launchDir/"
 	outdir = "Avipox_Results"
+	outstem = "Avipox"
 	taxon = 'Bamfordvirae'
 	
 }
