--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,8 @@ profiles {
 			clusterOptions = default_options
 			storeDir = 'chkpnt'
 			withName: 'removeAdapters' {
+				queue = 'sThM.q'
+				default_options = '-l mres=16G,h_data=16G,h_vmem=16G,himem -S /bin/bash'
 				conda = 'bioconda::adapterremoval=2.3.3 conda-forge::libzlib=1.2.13'
 			}
 			withName: 'deduplicateReads' {
