--- a/nextflow.config
+++ b/nextflow.config
@@ -39,14 +39,12 @@ profiles {
 			storeDir = 'chkpnt'
 			withName: 'removeAdapters' {
 				queue = 'mThM.q'
-				cpus = 1
-				default_options = '-l mres=16G,h_data=16G,h_vmem=16G,himem -S /bin/bash'
+				clusterOptions = '-l mres=16G,h_data=16G,h_vmem=16G,himem -S /bin/bash'
 				conda = 'bioconda::adapterremoval=2.3.3 conda-forge::libzlib=1.2.13'
 			}
 			withName: 'deduplicateReads' {
 				queue = 'mThM.q'
-				cpus = 1
-				default_options = '-l mres=16G,h_data=16G,h_vmem=16G,himem -S /bin/bash'
+				clusterOptions = '-l mres=16G,h_data=16G,h_vmem=16G,himem -S /bin/bash'
 				conda = 'bioconda::seqtk=1.4 cd-hit=4.8.1 conda-forge::libzlib=1.2.13'
 			}
 			withName: 'blastReads' {
