--- a/nextflow.config
+++ b/nextflow.config
@@ -29,22 +29,18 @@ conda.enabled = true
 profiles {
 
 	hydra {
-		default_options = '-l mres=8G,h_data=8G,h_vmem=8G -S /bin/bash' // Default options for computation steps
+		default_options = '-l mres=16G,h_data=16G,h_vmem=16G,himem -S /bin/bash' // Default options for computation steps
 		
 		process {
 			executor = 'sge'
 			errorStrategy = 'finish'
-			queue = 'sThC.q'
+			queue = 'mThM.q'
 			clusterOptions = default_options
 			storeDir = 'chkpnt'
 			withName: 'removeAdapters' {
-				queue = 'mThM.q'
-				clusterOptions = '-l mres=16G,h_data=16G,h_vmem=16G,himem -S /bin/bash'
 				conda = 'bioconda::adapterremoval=2.3.3 conda-forge::libzlib=1.2.13'
 			}
 			withName: 'deduplicateReads' {
-				queue = 'mThM.q'
-				clusterOptions = '-l mres=16G,h_data=16G,h_vmem=16G,himem -S /bin/bash'
 				conda = 'bioconda::seqtk=1.4 cd-hit=4.8.1 conda-forge::libzlib=1.2.13'
 			}
 			withName: 'blastReads' {
