--- a/nextflow.config
+++ b/nextflow.config
@@ -15,12 +15,13 @@ manifest {
 
 params {
 
-	inputCsv = 'test.csv'
-	blastdb = "$launchDir/avipox.fasta"
-	readsdir = "$launchDir/"
-	outdir = "Avipox_Results"
-	outstem = "Avipox"
-	taxon = 'Bamfordvirae'
+	inputCsv = 'test.csv' // Input CSV of Samples
+	blastdb = "$launchDir/avipox.fasta" // Path to custom Avipoxvirus BLAST database
+	ntdb = '/scratch/dbs/blast/v5/nt' // Path to BLAST nt database
+	readsdir = "$launchDir/" // Directory holding raw read pairs
+	outdir = "Avipox_Results" // Output directory
+	outstem = "Avipox" // Output file stem
+	taxon = 'Bamfordvirae' // Taxon to search for
 	
 }
 
