--- a/nextflow.config
+++ b/nextflow.config
@@ -44,7 +44,7 @@ profiles {
 			withName: 'deduplicateReads' {
 				conda = 'bioconda::seqtk=1.4 cd-hit=4.8.1 conda-forge::libzlib=1.2.13'
 			}
-			withName: 'blastReads' {
+			withName: 'blastReads|ntBlastReads' {
 				queue = 'lThMuVM.tq'
 				clusterOptions = "-l mres=8G,h_data=8G,himem -S /bin/bash"
 				conda = 'bioconda::blast=2.13.0 conda-forge::libzlib'
