--- a/nextflow.config
+++ b/nextflow.config
@@ -42,7 +42,7 @@ profiles {
 				conda = 'bioconda::adapterremoval=2.3.3 conda-forge::libzlib=1.2.13'
 			}
 			withName: 'deduplicateReads' {
-				conda = 'bioconda::seqtk=1.4 cd-hit=4.8.1 conda-forge::libzlib=1.2.13'
+				conda = 'bioconda::seqtk=1.4 bioconda::cd-hit=4.8.1 conda-forge::libzlib=1.2.13'
 			}
 			withName: 'blastReads|ntBlastReads' {
 				queue = 'lThMuVM.tq'
