--- a/nextflow.config
+++ b/nextflow.config
@@ -7,7 +7,7 @@ manifest {
 	homePage = 'https://github.com/campanam/Avipoxvirus'
 	description = 'Pipeline to identify avipoxivirus sequences'
 	mainScript = 'avipox.nf'
-	version = '0.1.0'
+	version = '0.2.0'
 	nextflowVersion = '>=22.04.4'
 
 }
@@ -22,6 +22,8 @@ params {
 	outdir = "Avipox_Results" // Output directory
 	outstem = "Avipox" // Output file stem
 	taxon = 'Bamfordvirae' // Taxon to search for
+	profiledamage = true // Run damage profiling (true or false)
+	refseq = "$launchDir/canarypox.fasta" // Path to reference sequence for damage profiling
 	
 }
 
@@ -53,6 +55,11 @@ profiles {
 				cpus = 2
 				penv = 'mthread'
 				conda = 'bioconda::megan=6.24.20'
+			}
+			withName: 'profileDamage' {
+				cpus = 2
+				penv = 'mthread'
+				conda = 'bioconda::gatk4=4.4.0.0 bioconda::picard=3.1.0 conda-forge::openjdk=17.0.9 bioconda::damageprofiler=1.1 bioconda::bwa=0.7.17 bioconda::samtools=1.18 conda-forge::libzlib=1.2.13'
 			}
 		}
 	}
