--- a/nextflow.config
+++ b/nextflow.config
@@ -50,7 +50,7 @@ profiles {
 			withName: 'blastReads|ntBlastReads' {
 				queue = 'lThMuVM.tq'
 				clusterOptions = "-l mres=8G,h_data=8G,himem -S /bin/bash"
-				conda = 'bioconda::blast=2.13.0 conda-forge::libzlib'
+				conda = 'bioconda::blast=2.13.0 conda-forge::libzlib=1.2.13'
 			}
 			withName: 'blast2rmalca|getSequences' {
 				cpus = 2
