BLAST memory update

--- a/nextflow.config
+++ b/nextflow.config
@@ -47,11 +47,16 @@ profiles {
 			withName: 'deduplicateReads' {
 				conda = 'bioconda::seqtk=1.4 bioconda::cd-hit=4.8.1 conda-forge::libzlib=1.2.13'
 			}
-			withName: 'blastReads|ntBlastReads' {
-				queue = 'lThMuVM.tq'
-				clusterOptions = "-l mres=8G,h_data=8G,himem -S /bin/bash"
-				conda = 'bioconda::blast=2.13.0 conda-forge::libzlib=1.2.13'
-			}
+			withName: 'blastReads' {
+                                queue = 'mThM.q'
+                                clusterOptions = "-l mres=50G,h_data=10G,h_vmem=10G,himem -S /bin/bash"
+                                conda = 'bioconda::blast=2.13.0 conda-forge::libzlib=1.2.13'
+                        }
+                        withName: 'ntBlastReads' {
+                                queue = 'mThM.q'
+                                clusterOptions = "-l mres=500G,h_data=100G,h_vmem=100G,himem -S /bin/bash"
+                                conda = 'bioconda::blast=2.13.0 conda-forge::libzlib=1.2.13'
+                        }
 			withName: 'blast2rmalca|getSequences' {
 				cpus = 2
 				penv = 'mthread'
