--- a/nextflow.config
+++ b/nextflow.config
@@ -48,15 +48,14 @@ profiles {
 				conda = 'bioconda::seqtk=1.4 bioconda::cd-hit=4.8.1 conda-forge::libzlib=1.2.13'
 			}
 			withName: 'blastReads' {
-                                queue = 'mThM.q'
-                                clusterOptions = "-l mres=50G,h_data=10G,h_vmem=10G,himem -S /bin/bash"
-                                conda = 'bioconda::blast=2.13.0 conda-forge::libzlib=1.2.13'
-                        }
-                        withName: 'ntBlastReads' {
-                                queue = 'mThM.q'
-                                clusterOptions = "-l mres=500G,h_data=100G,h_vmem=100G,himem -S /bin/bash"
-                                conda = 'bioconda::blast=2.13.0 conda-forge::libzlib=1.2.13'
-                        }
+                clusterOptions = "-l mres=50G,h_data=10G,h_vmem=10G,himem -S /bin/bash"
+                conda = 'bioconda::blast=2.13.0 conda-forge::libzlib=1.2.13'
+            }
+            withName: 'ntBlastReads' {
+                queue = 'sThM.q'
+                clusterOptions = "-l mres=450G,h_data=450G,h_vmem=450G,himem -S /bin/bash"
+                conda = 'bioconda::blast=2.13.0 conda-forge::libzlib=1.2.13'
+            }
 			withName: 'blast2rmalca|getSequences' {
 				cpus = 2
 				penv = 'mthread'
